docs/version-1.12/modules/en/pages/troubleshooting-maintenance/maintenance.adoc
= Node Maintenance and Kubernetes Upgrade Guide
:revdate: 2026-06-01
:page-revdate: {revdate}
:current-version: {page-component-version}

Follow the instructions for handling planned node maintenance and upgrading Kubernetes version for the cluster.

[#_updating_the_node_os_or_container_runtime]
== Updating the Node OS or Container Runtime

. Cordon the node. {longhorn-product-name} automatically disables the node scheduling when a Kubernetes node is cordoned.
. Drain the node to move the workload to somewhere else.
+
It is necessary to use `--ignore-daemonsets` to drain the node. The `--ignore-daemonsets` is needed because {longhorn-product-name} deployed some daemonsets such as `Longhorn manager`, `Longhorn CSI plugin`, `engine image`.
+
While the drain proceeds, engine processes on the node is migrated with the workload pods to other nodes.
+
[NOTE]
====
Volumes that are not attached through the CSI flow on the node (for example, manually attached using UI) are not automatically attached to new nodes by Kubernetes during the draining. Therefore, {longhorn-product-name} prevents the node from completing the drain operation. The user needs to detach these volumes manually to unblock the draining.
====
+
While the drain proceeds, replica processes on the node either continue to run or eventually be evicted and stopped based on the xref:_node_drain_policy_recommendations[Node Drain Policy].
+
[NOTE]
====
By default, if there is one last healthy replica for a volume on the node, {longhorn-product-name} prevents the node from completing the drain operation, to protect the last replica and prevent the disruption of the workload. You can control this behavior with the setting xref:longhorn-system/settings.adoc#_node_drain_policy[Node Drain Policy], or xref:nodes/disks-or-nodes-eviction.adoc[evict the replica to other nodes before draining]. See xref:_node_drain_policy_recommendations[Node Drain Policy Recommendations] for considerations when selecting a policy.
====
+
After the drain is completed, there should be no engine or replica processes running on the node, as the instance-manager pod that was running them are be stopped. Depending on the xref:_node_drain_policy_recommendations[Node Drain Policy], replicas scheduled to the node either appear as `Failed` or be removed in favor of replacements. Workloads using Longhorn volumes function as expected and enough replicas are running elsewhere to meet the requirements of the policy.
+
[NOTE]
====
Normally you do not need to evict the replicas before the drain operation, as long as you have healthy replicas on other nodes. The replicas can be reused later, once the node back online and uncordoned. See xref:_node_drain_policy_recommendations[Node Drain Policy] for further guidance.
====

. Perform the necessary maintenance, including shutting down or rebooting the node.
. Uncordon the node. {longhorn-product-name} automatically re-enable the node scheduling. If there are existing replicas on the node, {longhorn-product-name} might use those replicas to speed up the rebuilding process. You can set the xref:longhorn-system/settings.adoc#_replica_replenishment_wait_interval[Replica Replenishment Wait Interval] setting to customize how long {longhorn-product-name} should wait for potentially reusable replica to be available.

== Removing a Disk

To remove a disk:

. Disable the disk scheduling.
. Evict all the replicas on the disk.
. Delete the disk.

=== Reusing the Node Name

These steps also apply if you hve replaced a node using the same node name. {longhorn-product-name} recognize that the disks are different once the new node is up. You need to remove the original disks first and add them back for the new node if it uses the same name as the previous node.

== Removing a Node

To remove a node:

. Disable the disk scheduling.
. Evict all the replicas on the node.
. Detach all the volumes on the node.
+
If the node has been drained, all the workloads should be migrated to another node already.
+
If there are any other volumes remaining attached, detach them before continuing.

. Remove the node from {longhorn-product-name} using the `Delete` in the `Node` tab.
+
Or, remove the node from Kubernetes, using:
+
kubectl delete node +++<node-name>++++++</node-name>+++

. {longhorn-product-name} automatically removes the node from the cluster.

== Upgrading Kubernetes

=== In-place Upgrade

In-place upgrade is upgrading method in which nodes are upgraded without being removed from the cluster. Some example
solutions that use this upgrade methods are https://documentation.suse.com/cloudnative/k3s/latest/en/upgrades/automated.html[{k3s-product-name} automated upgrades], https://documentation.suse.com/cloudnative/rancher-manager/latest/en/cluster-admin/backups-and-restore/backups-and-restore.html[{rancher-product-name}'s Kubernetes upgrade guide],
https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/kubeadm-upgrade/[Kubeadm upgrade], etc...

With the assumption that node and disks are not being deleted or/removed, the recommended upgrading guide is:

. Cordon and drain a node before upgrading Kubernetes components. Draining instructions are similar to the ones at xref:_updating_the_node_os_or_container_runtime[Updating the Node OS or Container Runtime].
. The drain `--timeout` should be big enough so that replica rebuildings on healthy nodes can finish between node upgrades. The more Longhorn replicas you have on the draining node, the more time it takes for the Longhorn replicas to be rebuilt on other healthy nodes. We recommending you to test and select a big enough value or set it to 0 (aka never timeout).
. The number of nodes upgrading at a time should be smaller than the number of Longhorn replicas for each volume.
This is so that a running Longhorn volume has at least one healthy replica running at a time.
. Consider setting the setting xref:longhorn-system/settings.adoc#_node_drain_policy[Node Drain Policy] to `allow-if-replica-is-stopped` so that the drain is not blocked by the last healthy replica of a detached volume. See xref:_node_drain_policy_recommendations[Node Drain Policy Recommendations] for considerations when selecting a policy.

=== Managed Kubernetes

See the following topics:
* xref:/upgrades/kubernetes/upgrade-k8s-on-aks.adoc[]
* xref:/upgrades/kubernetes/upgrade-k8s-on-eks.adoc[]
* xref:/upgrades/kubernetes/upgrade-k8s-on-gke.adoc[]

[#_node_drain_policy_recommendations]
== Node Drain Policy Recommendations

There are currently five Node Drain Policies available for selection. Each has its own benefits and drawbacks. This section provides general guidance on each and suggests situations in which each might be used.

=== Important Notes

Node Drain Policy is intended to govern {longhorn-product-name} behavior when a node is actively being drained. However, there is no way for {longhorn-product-name} to determine the difference between the cordoning and draining of a node, so, depending on the policy, {longhorn-product-name} may take action any time a node is cordoned, even if it is not being drained.

Node drain policy works to prevent the eviction of an instance-manager pod during a drain until certain conditions are met. If the instance-manager pod cannot be evicted, the drain cannot complete. This prevents a user (or automated process) from continuing to shut down or restart a node if it is not safe to do so. It may be tempting to ignore the drain failure and proceed with maintenance operations if it seems to take too long, but this limits {longhorn-product-name}'s ability to protect data. Always look at events and/or logs to try to determine WHY the drain is not progressing and take actions
to fix the underlying issue.

=== Block If Contains Last Replica

This is the default policy. It is intended to provide a good balance between convenience and data protection. While it is in effect, {longhorn-product-name} prevents the eviction of an instance-manager pod (and the completion of a drain) on a cordoned node that contains the last healthy replica of a volume.

*Benefits*:

* Protects data by preventing the drain operation from completing until there is a healthy replica available for each volume available on another node.

*Drawbacks*:

* If there is only one replica for the volume, or if its other replicas are unhealthy, the user may need to manually (through the UI) request the eviction of replicas from the disk or node.
* Volumes may be degraded after the drain is complete. If the node is rebooted, redundancy is reduced until it is running again. If the node is removed, redundancy is reduced until another replica rebuilds.

=== Allow If Last Replica Is Stopped

This policy is similar to `Block If Contains Last Replica`. It is inherently less safe, but can allow drains to complete more quickly. It only prevents the eviction of an instance-manager pod (and the completion of a drain) on a node that contains the last RUNNING healthy replica.

*Benefits*:

* Allows the drain operation to proceed in situations where the node being drained is expected to come back online (data is not lost) and the replicas stored on the node's disks are not actively being used.

*Drawbacks*:

* Similar drawbacks to `Block If Contains Last Replica`.
* If, for some reason, the node never comes back, data is lost.

=== Always Allow

This policy does not protect data in any way, but allows drains to immediately complete. It never prevents the eviction of an instance-manager pod (and the completion of a drain). Do not use it in a production environment.

*Benefits*:

* The drain operation completes quickly without {longhorn-product-name} getting in the way.

*Drawbacks*:

* There is no opportunity for {longhorn-product-name} to protect data.

=== Block For Eviction

This policy provides the maximum amount of data protection, but can lead to long drain times and unnecessary data movement. It prevents the eviction of an instance-manager pod (and the completion of a drain) as long as any replicas remain on a node. Also, it takes action to automatically evict replicas from the node.

It is not recommended to leave this policy enabled under normal use, as it triggers replica eviction any time a node is cordoned. Only enable it during planned maintenance.

A primary use case for this policy is when automatically upgrading clusters in which volumes have no redundancy (`numberOfReplicas == 1`). Other policies prevent the drain until such replicas are manually evicted, which is inconvenient for automation.

*Benefits*:

* Protects data by preventing the drain operation from completing until all replicas have been relocated.
* Automatically evicts replicas, so the user does not need to do it manually (through the UI).
* Maintains replica redundancy at all times.

*Drawbacks*:

* The drain operation is slower than for other behaviors. Every replica must be rebuilt on another node
before it can complete. Drain timeout must be adjusted as appropriate for the amount of data that will move during rebuilding.
* The drain operation is data-intensive, especially when Replica Auto Balance is enabled, as evicted replicas may be moved back to the drained node when or if it comes back online.
* Like all these policies, it triggers on cordon, not on drain. If a user regularly cordons nodes without draining them, replicas rebuilt pointlessly.

=== Block For Eviction If Contains Last Replica

This policy provides the data protection of the default `Block If Contains Last Replica` with the added convenience of automatic eviction. While it is in effect, {longhorn-product-name} prevents the eviction of an instance-manager pod (and the completion of a drain) on a cordoned node that contains the last healthy replica of a volume. Also, replicas that meet this condition are automatically evicted from the node.

It is not recommended to leave this policy enabled under normal use, as it may trigger replica eviction any time a node is cordoned. Only enable it during planned maintenance.

A primary use case for this policy is when automatically upgrading clusters in which volumes have no redundancy (`numberOfReplicas == 1`). Other policies prevent the drain until such replicas are manually evicted, which is inconvenient for automation.

*Benefits*:

* Protects data by preventing the drain operation from completing until there is a healthy replica available for each
volume available on another node.
* Automatically evicts replicas, so the user does not need to do it manually (through the UI).
* The drain operation is only as slow and data-intensive as is necessary to protect data.

*Drawbacks*:

* Volumes may be degraded after the drain is complete. If the node is rebooted, redundancy is reduced until it is running again. If the node is removed, redundancy is reduced until another replica rebuilds.
* Like all these policies, it triggers on cordon, not on drain. If a user regularly cordons nodes without draining them, replicas rebuilt pointlessly.
